# Grafika-Projekat

./: CMakeLists.txt  flower.c  main.c
